objects/FSL_SMN_DTC__c.object
<CustomObject>
    <fields>
        <fullName>BusinessUnit__c</fullName>
        <label>BusinessUnit</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CDSID__c</fullName>
        <externalId>true</externalId>
        <label>CDSID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreatedBy__c</fullName>
        <label>CreatedBy</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FaultTypeFC__c</fullName>
        <label>FaultTypeFC</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FaultTypePCode__c</fullName>
        <label>FaultTypePCode</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FaultTypeSPNFMI__c</fullName>
        <label>FaultTypeSPNFMI</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>InActive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>FSL SMN/DTC</label>
    <nameField>
        <label>SMN</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>FSL SMN/DTCs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>